--- a/app/views/apprenticeships/home/signup.html.erb
+++ b/app/views/apprenticeships/home/signup.html.erb
@@ -1,21 +1,17 @@
 <%= content_for :page_title, t('.page_title') %>
 <%= content_for :page_section, t('apprenticeships.page_section') %>
+
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
+      <h1 class="govuk-heading-xl"><%= t('.title') %></h1>
 
-<%= form_tag apprenticeships_search_results_path, method: :get do %>
-  <label class="govuk-label govuk-label--xl" for="search">
-    <%= t('Signup for a Digital Apprenticeship Service (DAS) Account  STUB') %>
-  </label>
-  <span id="more-detail-hint" class="govuk-hint">
-	Before using this service, you need to have a Digital Apprenticeship Service (DAS) account.
-   <br/>
-      	To access funds to pay for apprenticeship training you need to register on the apprenticeship service. 
-   <br/>
-  </span>
-</div> 
-</div> 
- <%= link_to t('common.continue'), 'training_provider' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
-<% end %>
-</div> 
+      <p class="govuk-heading-m"><%= t('.lead_text_html') %></p>
+
+      <p class="govuk-body"><%= t('.body_text_01_html') %></p>
+
+      <%= link_to t('common.back_to_start'), '/apprenticeships/' , role: 'button', class: 'govuk-button govuk-!-margin-top-4' %>
+
+    </div>
+  </div>
