FM52 - preparing for postcode lookup api

--- a/app/views/facilities_management/buildings/_building_address.html.erb
+++ b/app/views/facilities_management/buildings/_building_address.html.erb
@@ -3,9 +3,12 @@
 <div class="govuk-!-margin-top-4 fm-postcode-lookup-panel">
   <h2 class="govuk-heading-m govuk-!-margin-bottom-0">Enter Postcode</h2>
   <span class="govuk-caption-m govuk-!-margin-top-0 govuk-!-margin-bottom-4">For example SW1A 2AA</span>
-  <div class="">
-    <input type="text" class="govuk-input govuk-input--width-5 govuk-!-margin-right-3">
-    <a href="#" role="button" class="govuk-button">Find address</a>
+  <div id="fm-postcode-error-form-group" class="govuk-form-group">
+    <span id="fm-postcode-error" class="govuk-error-message govuk-visually-hidden">
+      The postcode entered is invalid
+    </span>
+    <input id="fm-postcode-input" type="text" class="govuk-input govuk-input--width-5 govuk-!-margin-right-3">
+    <a id="fm-post-code-lookup-button" href="#" role="button" class="govuk-button">Find address</a>
   </div>
   <div id="fm-post-code-results-container" class="govuk-form-group govuk-visually-hidden">
     <select class="govuk-select" id="fm-postcode-lookup-results" name="fm-postcode-lookup-results">
@@ -22,9 +25,10 @@
     </span>
     </summary>
     <div class="govuk-details__text">
-      blurb goes here?
+      Under construction
     </div>
   </details>
-  <a href="https://www.royalmail.com/find-a-postcode" class="govuk-link--no-visited-state" target="_blank" role="button">Find a postcode on Royal Mail's
+  <a href="https://www.royalmail.com/find-a-postcode" class="govuk-link--no-visited-state" target="_blank" role="button">Find
+    a postcode on Royal Mail's
     postcode finder</a>
 </div>
