--- a/app/views/facilities_management/buildings/new_building.html.erb
+++ b/app/views/facilities_management/buildings/new_building.html.erb
@@ -10,7 +10,9 @@
       <h1 class="govuk-heading-xl">Add your building</h1>
       <%= render('new_building_name') %>
       <%= render('building_address') %>
+      <div class="govuk-!-margin-top-4">
+        <a id="fm-new-building-continue" href="#" class="govuk-button ccs-no-print" role="button">Continue</a>
+      </div>
     </div>
-
   </div>
 </div>
