--- a/app/views/apprenticeships/home/_provider_filters.html.erb
+++ b/app/views/apprenticeships/home/_provider_filters.html.erb
@@ -15,7 +15,7 @@
 
           <span id="c1-hint" class="govuk-hint ccs-govuk-hint--selected" data-txt="<%= t('.selected_label') %>">
             <span>
-              <span class="ccs-at-remove"><%= t('.list_of_filter_options_label') %>: </span>
+              <span class="ccs-remove"><%= t('.list_of_filter_options_label') %>: </span>
               <span class="ccs-filter-no"></span> <span class="ccs-filter-txt"></span>
             </span>
           </span>
@@ -55,7 +55,7 @@
 
           <span id="c2-hint" class="govuk-hint ccs-govuk-hint--selected" data-txt="<%= t('.selected_label') %>">
             <span>
-              <span class="ccs-at-remove"><%= t('.list_of_filter_options_label') %>: </span>
+              <span class="ccs-remove"><%= t('.list_of_filter_options_label') %>: </span>
               <span class="ccs-filter-no"></span> <span class="ccs-filter-txt"></span>
             </span>
           </span>          
@@ -104,7 +104,7 @@
 
           <span id="c3-hint" class="govuk-hint ccs-govuk-hint--selected" data-txt="<%= t('.selected_label') %>">
             <span>
-              <span class="ccs-at-remove"><%= t('.list_of_filter_options_label') %>: </span>
+              <span class="ccs-remove"><%= t('.list_of_filter_options_label') %>: </span>
               <span class="ccs-filter-no"></span> <span class="ccs-filter-txt"></span>
             </span>
           </span>          
@@ -159,7 +159,7 @@
 
           <span id="c4-hint" class="govuk-hint ccs-govuk-hint--selected" data-txt="<%= t('.selected_label') %>">
             <span>
-              <span class="ccs-at-remove"><%= t('.list_of_filter_options_label') %>: </span>
+              <span class="ccs-remove"><%= t('.list_of_filter_options_label') %>: </span>
               <span class="ccs-filter-no"></span> <span class="ccs-filter-txt"></span>
             </span>
           </span>          
@@ -199,7 +199,7 @@
 
           <span id="c5-hint" class="govuk-hint ccs-govuk-hint--selected" data-txt="<%= t('.selected_label') %>">
             <span>
-              <span class="ccs-at-remove"><%= t('.list_of_filter_options_label') %>: </span>
+              <span class="ccs-remove"><%= t('.list_of_filter_options_label') %>: </span>
               <span class="ccs-filter-no"></span> <span class="ccs-filter-txt"></span>
             </span>
           </span>          
@@ -251,7 +251,7 @@
 
           <span id="c6-hint" class="govuk-hint ccs-govuk-hint--selected" data-txt="<%= t('.selected_label') %>">
             <span>
-              <span class="ccs-at-remove"><%= t('.list_of_filter_options_label') %>: </span>
+              <span class="ccs-remove"><%= t('.list_of_filter_options_label') %>: </span>
               <span class="ccs-filter-no"></span> <span class="ccs-filter-txt"></span>
             </span>
           </span>          
@@ -303,7 +303,7 @@
 
           <span id="c7-hint" class="govuk-hint ccs-govuk-hint--selected" data-txt="<%= t('.selected_label') %>">
             <span>
-              <span class="ccs-at-remove"><%= t('.list_of_filter_options_label') %>: </span>
+              <span class="ccs-remove"><%= t('.list_of_filter_options_label') %>: </span>
               <span class="ccs-filter-no"></span> <span class="ccs-filter-txt"></span>
             </span>
           </span>          
