--- a/app/views/apprenticeships/home/download_provider.html.erb
+++ b/app/views/apprenticeships/home/download_provider.html.erb
@@ -49,7 +49,7 @@
     <h2 class="govuk-heading-m">Requirements</h2>
 
     <table class="govuk-table ccs-at-govuk-table--sm ccs-at-govuk-table--5050">
-        <caption class="govuk-table__caption ccs-at-remove">
+        <caption class="govuk-table__caption ccs-remove">
             Requirements summary
         </caption>
 
@@ -92,7 +92,7 @@
     <h2 class="govuk-heading-m">Filters used</h2>
 
     <table class="govuk-table ccs-at-govuk-table--sm ccs-at-govuk-table--5050">
-        <caption class="govuk-table__caption ccs-at-remove">
+        <caption class="govuk-table__caption ccs-remove">
             Filters used summary
         </caption>
 
