--- a/app/views/apprenticeships/home/training_details.html.erb
+++ b/app/views/apprenticeships/home/training_details.html.erb
@@ -43,7 +43,7 @@
           </p>
 
           <table class="govuk-table ccs-at-govuk-table--sm">
-            <caption class="govuk-table__caption ccs-at-remove">
+            <caption class="govuk-table__caption ccs-remove">
               <%= t('.provider_information_summary') %>
             </caption>
 
@@ -92,7 +92,7 @@
           <h2 class="govuk-heading-l"><%= t('.training_course_information_title') %></h2>
 
           <table class="govuk-table ccs-at-govuk-table--sm">
-            <caption class="govuk-table__caption ccs-at-remove">
+            <caption class="govuk-table__caption ccs-remove">
               <%= t('.training_course_information_summary') %>
             </caption>
 
