--- a/app/views/apprenticeships/home/search_results.html.erb
+++ b/app/views/apprenticeships/home/search_results.html.erb
@@ -126,7 +126,7 @@
       </div>
     </div>
 
-    <h2 class="govuk-heading-m ccs-at-remove">Results</h2>
+    <h2 class="govuk-heading-m ccs-remove">Results</h2>
 
     <ul class="ccs-at-results-list">
       <% results.each do |result| %>
