--- a/app/views/apprenticeships/home/supplier_search.html.erb
+++ b/app/views/apprenticeships/home/supplier_search.html.erb
@@ -35,7 +35,7 @@
   
     <table class="govuk-table">
       
-      <caption class="govuk-table__caption ccs-at-remove">Search results</caption>
+      <caption class="govuk-table__caption ccs-remove">Search results</caption>
 
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
