--- a/app/views/management_consultancy/suppliers/_supplier.html.erb
+++ b/app/views/management_consultancy/suppliers/_supplier.html.erb
@@ -1,6 +1,6 @@
 <div class="mc-supplier-record">
   <div class="govuk-grid-row supplier-record__header-group">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-m">
         <%= link_to supplier.name, management_consultancy_supplier_path(supplier.id), class: "govuk-!-font-size-27 mc-supplier-record__supplier-name ccs-no-underline" %>
         <% if supplier.sme? %>
@@ -8,6 +8,16 @@
         <% end %>
       </h2>
     </div>
+    <% supplier.rate_cards.select do |rate_card| %>
+      <% if rate_card.lot == params[:lot].to_i %>
+        <div class="govuk-grid-column-one-third">
+          <p class="govuk-!-font-size-36">
+            <%= number_to_currency(rate_card.average_daily_rate, precision: 0) %>
+          </p>
+          <p>Average day rate</p>
+        </div>
+      <% end %>
+    <% end%>
   </div>
   <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 </div>
