restructured js for AT

--- a/app/views/apprenticeships/home/understanding.html.erb
+++ b/app/views/apprenticeships/home/understanding.html.erb
@@ -7,7 +7,7 @@
 
       <h1 class="govuk-heading-xl"><%= t('.title') %></h1>
 
-      <p class="govuk-heading-m"><%= t('.lead_text') %></p>
+      <p class="govuk-heading-m govuk-!-padding-bottom-4"><%= t('.lead_text') %></p>
 
       <p class="govuk-body"><%= t('.body_text_01_html') %></p>
 
