--- a/app/views/layouts/_init-js.html.erb
+++ b/app/views/layouts/_init-js.html.erb
@@ -1,4 +1,4 @@
-<script src="/assets/apprenticeships.js"></script>
+<script src="/assets/apprenticeships/apprenticeships.js"></script>
 <script>
     window.GOVUKFrontend.initAll();
 
