--- a/app/views/apprenticeships/home/sorry.html.erb
+++ b/app/views/apprenticeships/home/sorry.html.erb
@@ -6,7 +6,7 @@
 
       <h1 class="govuk-heading-xl"><%= t('.title') %></h1>
 
-      <p class="govuk-heading-m"><%= t('.content_text') %></p>
+      <p class="govuk-heading-m govuk-!-padding-bottom-4"><%= t('.content_text') %></p>
 
       <p class="govuk-body"><%= t('.go_back_text_html') %></p>
 
