--- a/app/views/management_consultancy/journey/choose_help_needed.html.erb
+++ b/app/views/management_consultancy/journey/choose_help_needed.html.erb
@@ -21,5 +21,5 @@
       </div>
     <% end %>
   <% end %>
-  <%= submit_tag t('.submit'), class: "govuk-button" %>
+  <%= submit_tag t('common.submit'), class: "govuk-button" %>
 <% end %>
