--- a/app/views/facilities_management/buildings/manual_address_entry_form.html.erb
+++ b/app/views/facilities_management/buildings/manual_address_entry_form.html.erb
@@ -10,7 +10,8 @@
       <h1 class="govuk-heading-xl">Add missing address</h1>
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
-          <h2 class="govuk-heading-s govuk-!-margin-bottom-0 govuk-!-margin-top-0">What is your building's address?</h2>
+          <h2 class="govuk-heading-s govuk-!-margin-bottom-0 govuk-!-margin-top-0">What is your building's
+            address?</h2>
           <h2 class="govuk-caption-m govuk-!-margin-top-0 govuk-!-margin-bottom-3">Enter a UK address, including
             postcode</h2>
           <div id="fm-address-line-1-container" name="fm-address-error-container" class="govuk-form-group">
@@ -60,7 +61,6 @@
             </label>
             <input class="govuk-input govuk-input--width-10" id="fm-address-postcode" name="fm-address-postcode" type="text">
           </div>
-
         </fieldset>
       </div>
 
