--- a/app/views/apprenticeships/home/search_results.html.erb
+++ b/app/views/apprenticeships/home/search_results.html.erb
@@ -115,10 +115,10 @@
     <% end %>
   </section>
 
-  <section id="ccs-at-search-results" class="govuk-grid-column-two-thirds ccs-at-search-results">
+  <section id="ccs-search-results" class="govuk-grid-column-two-thirds ccs-search-results">
 
     <div class="govuk-form-group">
-      <div class="ccs-at-search-results__sort">
+      <div class="ccs-search-results__sort">
         <label class="govuk-label" for="sortBox">
           <%= t('.sort_by_label') %>
         </label>
@@ -134,7 +134,7 @@
       <% end %>
     </ul>
 
-    <%= link_to '/apprenticeships/find_apprentices5', class: 'govuk-link govuk-!-font-size-19 govuk-link--no-visited-state ccs-at-next' do %>
+    <%= link_to '/apprenticeships/find_apprentices5', class: 'govuk-link govuk-!-font-size-19 govuk-link--no-visited-state ccs-next' do %>
       <%= t('common.next')%><span>&nbsp;&rarr;</span>
     <% end %>
 
