--- a/app/views/apprenticeships/home/supplier_search.html.erb
+++ b/app/views/apprenticeships/home/supplier_search.html.erb
@@ -31,7 +31,7 @@
     <% end %> 
   </section>
 
-  <section id="ccs-at-search-results" class="govuk-grid-column-two-thirds ccs-at-search-results">
+  <section id="ccs-search-results" class="govuk-grid-column-two-thirds ccs-search-results">
   
     <table class="govuk-table">
       
@@ -68,7 +68,7 @@
       </tbody>
     </table>             
 
-    <%= link_to '/apprenticeships/supplier_search2', class: 'govuk-link govuk-!-font-size-19 govuk-link--no-visited-state ccs-at-next' do %>
+    <%= link_to '/apprenticeships/supplier_search2', class: 'govuk-link govuk-!-font-size-19 govuk-link--no-visited-state ccs-next' do %>
       <%= t('common.next')%><span>&nbsp;&rarr;</span>
     <% end %>
 
