--- a/app/views/ccs_patterns/home/index.html.erb
+++ b/app/views/ccs_patterns/home/index.html.erb
@@ -9,6 +9,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="/ccs-patterns/dynamic-accordian">Dynamic accordian</a></li>
+        <li><a href="/ccs-patterns/supplier-results-v1">Supplier results v1</a></li>
       </ul>
 
       
