--- a/app/views/management_consultancy/journey/other_framework.html.erb
+++ b/app/views/management_consultancy/journey/other_framework.html.erb
@@ -3,4 +3,4 @@
 </h1>
 <p><%= t('.introduction') %></p>
 
-<%= link_to t('.back_to_start'), journey_start_path(journey: ManagementConsultancy::Journey.journey_name), role: 'button', class: 'govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
+<%= link_to t('.back_to_start'), management_consultancy_path, role: 'button', class: 'govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
