FM52 added regions

--- a/app/views/facilities_management/buildings/_building_list.html.erb
+++ b/app/views/facilities_management/buildings/_building_list.html.erb
@@ -22,26 +22,26 @@
           </div>
           <div class="govuk-accordion__section-content" aria-labelledby="<%= obj['name'] %>">
             <div class="govuk-grid-row">
-              <div class="govuk-grid-column-one-quarter">
+              <div class="govuk-grid-column-one-quarter govuk-!-font-size-16 govuk-!-font-weight-bold">
                 Type:
               </div>
-              <div class="govuk-grid-column-three-quarters">
-                Other - Underground Lab
-              </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-one-quarter">
-                Region:
-              </div>
-              <div class="govuk-grid-column-three-quarters">
+              <div class="govuk-grid-column-three-quarters govuk-!-font-size-16">
 
               </div>
             </div>
             <div class="govuk-grid-row">
-              <div class="govuk-grid-column-one-quarter">
+              <div class="govuk-grid-column-one-quarter govuk-!-font-size-16 govuk-!-font-weight-bold">
+                Region:
+              </div>
+              <div class="govuk-grid-column-three-quarters govuk-!-font-size-16">
+                <%= obj['region'] %>
+              </div>
+            </div>
+            <div class="govuk-grid-row">
+              <div class="govuk-grid-column-one-quarter govuk-!-font-size-16 govuk-!-font-weight-bold">
                 Address:
               </div>
-              <div class="govuk-grid-column-three-quarters">
+              <div class="govuk-grid-column-three-quarters govuk-!-font-size-16">
                 <%= obj['address']['fm-address-line-1'] %>,
                 <%= obj['address']['fm-address-line-2'] %>,
                 <%= obj['address']['fm-address-town'] %>,
@@ -50,45 +50,45 @@
               </div>
             </div>
             <div class="govuk-grid-row">
-              <div class="govuk-grid-column-one-quarter">
+              <div class="govuk-grid-column-one-quarter govuk-!-font-size-16 govuk-!-font-weight-bold">
                 Postcode in london:
               </div>
-              <div class="govuk-grid-column-three-quarters">
+              <div class="govuk-grid-column-three-quarters govuk-!-font-size-16">
                 <%= obj['isLondon'] %>
               </div>
             </div>
 
             <div class="govuk-grid-row">
-              <div class="govuk-grid-column-one-quarter">
+              <div class="govuk-grid-column-one-quarter govuk-!-font-size-16 govuk-!-font-weight-bold">
                 Internal area:
               </div>
-              <div class="govuk-grid-column-three-quarters">
+              <div class="govuk-grid-column-three-quarters govuk-!-font-size-16">
 
               </div>
             </div>
 
             <div class="govuk-grid-row">
-              <div class="govuk-grid-column-one-quarter">
+              <div class="govuk-grid-column-one-quarter govuk-!-font-size-16 govuk-!-font-weight-bold">
                 External area:
               </div>
-              <div class="govuk-grid-column-three-quarters">
+              <div class="govuk-grid-column-three-quarters govuk-!-font-size-16">
 
               </div>
             </div>
 
             <div class="govuk-grid-row">
-              <div class="govuk-grid-column-one-quarter">
+              <div class="govuk-grid-column-one-quarter govuk-!-font-size-16 govuk-!-font-weight-bold">
                 Lifts:
               </div>
-              <div class="govuk-grid-column-three-quarters">
+              <div class="govuk-grid-column-three-quarters govuk-!-font-size-16">
 
               </div>
             </div>
             <div class="govuk-grid-row">
-              <div class="govuk-grid-column-one-quarter">
+              <div class="govuk-grid-column-one-quarter govuk-!-font-size-16 govuk-!-font-weight-bold">
                 Floors:
               </div>
-              <div class="govuk-grid-column-three-quarters">
+              <div class="govuk-grid-column-three-quarters govuk-!-font-size-16">
 
               </div>
             </div>
