--- a/app/views/management_consultancy/suppliers/index.html.erb
+++ b/app/views/management_consultancy/suppliers/index.html.erb
@@ -9,8 +9,11 @@
     <p>
       <%= link_to(t('.download_suppliers_list'), management_consultancy_suppliers_download_path, class: 'govuk-button') unless @suppliers.empty? %>
     </p>
-    <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
-    <%= render partial: 'supplier', collection: @suppliers, locals: { lot_number: @lot.number } %>
+    <section class="govuk-grid-column-two-thirds ccs-search-results">
+      <ul class="ccs-at-results-list">
+        <%= render partial: 'supplier', collection: @suppliers, locals: { lot_number: @lot.number } %>
+      </ul>
+    </section>
     <%= paginate @suppliers, views_prefix: 'shared', window: 2, outer_window: 1 %>
   </div>
 </div>
